Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntegerNumObjField.quorum
class Main
    Number n
    action Main
        integer int = 0
        num:SetValue(7.5)
        int = cast(integer, n)
        if int = 7
            output "passed"
        end
    end
end