Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBooleanNumObj.quorum
class main
    action Main
        Number n
        boolean bool
        n:SetValue(7.5)
        bool = cast(boolean, n)
    end
end